tests/snapshots/libsml_testing__files@EMH_eHZ-HW8E2A5L0EK2P_2.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/EMH_eHZ-HW8E2A5L0EK2P_2.bin
---
Ok(
    [
        Message {
            transaction_id: [0, 25, 0, 85, 233, 0],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [0, 25, 14, 166, 163, 0],
                server_id: [6, 69, 77, 72, 1, 2, 113, 88, 32, 81],
            },
        },
        Message {
            transaction_id: [0, 25, 0, 85, 233, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [6, 69, 77, 72, 1, 2, 113, 88, 32, 81],
                act_sensor_time: SecIndex(245817516),
                val_list: [
                    ListEntry {
                        obj_name: [129, 129, 199, 130, 3, 255],
                        value: [69, 77, 72],
                    },
                    ListEntry {
                        obj_name: [1, 0, 0, 0, 9, 255],
                        value: [6, 69, 77, 72, 1, 2, 113, 88, 32, 81],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 386u16,
                        unit: 30,
                        scaler: -1,
                        value: 133124849i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 1, 255],
                        unit: 30,
                        scaler: -1,
                        value: 133124849i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 2, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0i64,
                    },
                    ListEntry {
                        obj_name: [1, 0, 15, 7, 0, 255],
                        unit: 27,
                        scaler: -1,
                        value: 1394i32,
                    },
                    ListEntry {
                        obj_name: [129, 129, 199, 130, 5, 255],
                        value: [25, 146, 26, 82, 101, 100, 172, 186, 227, 2, 110, 97, 53, 38, 117, 236, 40, 39, 102, 131, 240, 45, 187, 50, 250, 112, 30, 58, 117, 59, 52, 33, 139, 100, 102, 177, 80, 100, 223, 89, 25, 249, 241, 63, 132, 181, 178, 201],
                    },
                ],
            },
        },
        Message {
            transaction_id: [0, 25, 0, 85, 233, 4],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)

