tests/snapshots/libsml_testing__files@EMH_eHZ-IW8E2AWL0EK2P.bin.snap
---
source: tests/libsml-testing.rs
assertion_line: 80
expression: s
input_file: tests/libsml-testing/EMH_eHZ-IW8E2AWL0EK2P.bin
---
Err(DiscardedBytes(2))
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Ok(310)
Err(DiscardedBytes(158))

