tests/snapshots/libsml_testing__files@HOLLEY_DTZ541-BDBA_with_PIN.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/HOLLEY_DTZ541-BDBA_with_PIN.bin
---
Ok(
    [
        Message {
            transaction_id: [0, 0, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [0, 0, 1, 113, 98, 168],
                server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230],
                ref_time: SecIndex(24208040),
            },
        },
        Message {
            transaction_id: [0, 0, 2],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                client_id: [255, 255, 255, 255, 255, 255],
                server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(24208040),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [72, 76, 89],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1835268u32,
                        val_time: SecIndex(24208040),
                        unit: 30,
                        scaler: -1,
                        value: 23559290u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 376i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [0, 0, 3],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [0, 0, 1],
            group_id: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [0, 0, 1, 113, 98, 169],
                server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230],
                ref_time: SecIndex(24208041),
            },
        },
        Message {
            transaction_id: [0, 0, 2],
            group_id: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                client_id: [255, 255, 255, 255, 255, 255],
                server_id: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(24208041),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [72, 76, 89],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 72, 76, 89, 2, 0, 13, 107, 230],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1835268u32,
                        val_time: SecIndex(24208041),
                        unit: 30,
                        scaler: -1,
                        value: 23559291u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 374i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [0, 0, 3],
            group_id: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)

