tests/snapshots/libsml_testing__files@ISKRA_MT631-D1A52-K0z-H01_with_PIN.bin.snap
---
source: tests/libsml-testing.rs
expression: s
input_file: tests/libsml-testing/ISKRA_MT631-D1A52-K0z-H01_with_PIN.bin
---
Ok(
    [
        Message {
            transaction_id: [9, 157, 250, 172],
            group_no: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [3, 52, 168, 228],
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                ref_time: SecIndex(53782327),
                sml_version: 1,
            },
        },
        Message {
            transaction_id: [9, 157, 250, 173],
            group_no: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(53782327),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [73, 83, 75],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1048836u32,
                        unit: 30,
                        scaler: -1,
                        value: 20431047u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0u8,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 193i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [9, 157, 250, 174],
            group_no: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [9, 157, 250, 175],
            group_no: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [3, 52, 168, 229],
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                ref_time: SecIndex(53782328),
                sml_version: 1,
            },
        },
        Message {
            transaction_id: [9, 157, 250, 176],
            group_no: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(53782328),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [73, 83, 75],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1048836u32,
                        unit: 30,
                        scaler: -1,
                        value: 20431048u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0u8,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 194i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [9, 157, 250, 177],
            group_no: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [9, 157, 250, 178],
            group_no: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [3, 52, 168, 230],
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                ref_time: SecIndex(53782329),
                sml_version: 1,
            },
        },
        Message {
            transaction_id: [9, 157, 250, 179],
            group_no: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(53782329),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [73, 83, 75],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1048836u32,
                        unit: 30,
                        scaler: -1,
                        value: 20431048u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0u8,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 193i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [9, 157, 250, 180],
            group_no: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [9, 157, 250, 181],
            group_no: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [3, 52, 168, 231],
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                ref_time: SecIndex(53782330),
                sml_version: 1,
            },
        },
        Message {
            transaction_id: [9, 157, 250, 182],
            group_no: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(53782330),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [73, 83, 75],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1048836u32,
                        unit: 30,
                        scaler: -1,
                        value: 20431049u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0u8,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 194i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [9, 157, 250, 183],
            group_no: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)
Ok(
    [
        Message {
            transaction_id: [9, 157, 250, 184],
            group_no: 0,
            abort_on_error: 0,
            message_body: OpenResponse {
                req_file_id: [3, 52, 168, 232],
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                ref_time: SecIndex(53782331),
                sml_version: 1,
            },
        },
        Message {
            transaction_id: [9, 157, 250, 185],
            group_no: 0,
            abort_on_error: 0,
            message_body: GetListResponse {
                server_id: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                list_name: [1, 0, 98, 10, 255, 255],
                act_sensor_time: SecIndex(53782331),
                val_list: [
                    ListEntry {
                        obj_name: [1, 0, 96, 50, 1, 1],
                        value: [73, 83, 75],
                    },
                    ListEntry {
                        obj_name: [1, 0, 96, 1, 0, 255],
                        value: [10, 1, 73, 83, 75, 0, 4, 122, 85, 68],
                    },
                    ListEntry {
                        obj_name: [1, 0, 1, 8, 0, 255],
                        status: 1048836u32,
                        unit: 30,
                        scaler: -1,
                        value: 20431049u32,
                    },
                    ListEntry {
                        obj_name: [1, 0, 2, 8, 0, 255],
                        unit: 30,
                        scaler: -1,
                        value: 0u8,
                    },
                    ListEntry {
                        obj_name: [1, 0, 16, 7, 0, 255],
                        unit: 27,
                        scaler: 0,
                        value: 194i16,
                    },
                ],
            },
        },
        Message {
            transaction_id: [9, 157, 250, 186],
            group_no: 0,
            abort_on_error: 0,
            message_body: CloseResponse,
        },
    ],
)

